--- a/frontend/src/Reusable/Header.css
+++ b/frontend/src/Reusable/Header.css
@@ -15,3 +15,18 @@ img:active {
   box-shadow: 0 0 1px 2px #00d2a8;
   filter: contrast(100%);
 }
+
+@keyframes slideDownFadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(-50%);
+  }
+  100% {
+    opacity: 0.95;
+    transform: translateY(0);
+  }
+}
+
+.stats-animate {
+  animation: slideDownFadeIn 1s ease-out forwards;
+}
